--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, "About Us") %>
+<h1>About Us</h1>
+<p>My name is Delta, still learning rails. contact me at <a href="mailto:me@widyangga.com">me@widyangga.com</a></p>
